@@ -14,6 +14,7 @@ TO DO:
 0.46 to be released
     . Add another, more local test for large pages
     . Add hint about bufsize to Troubleshooting.pod
+    . Add test that bufsize actually takes effect
 
 0.45 20110208
     . eval_in_page raises errors from perspective of the caller
